# Capstone

./: .env.example  .gitignore  README.md  duplicate_labelling.ipynb  exploration.ipynb  pyproject.toml
scratch/: food_mvp_recipe_matching.ipynb
scripts/: db.py  infer_schema.py  load_food_density.py  load_recipes.py  usda_schema_inferred.json
sql/: 00_create_schema.sql  01_load_reference.sql  02_load_food.sql  03_load_food_types.sql  04_load_food_details.sql  05_load_lab_and_fndds.sql  06_create_food_mvp.sql  10_create_recipe_schema.sql  20_create_conversions_schema.sql  99_create_indexes.sql  load_all.sh  load_all_resume.sh  load_conversions.sh  load_recipes.sh
