[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ingredient-parser-nlp>=2.7.0",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.0",
    "matplotlib>=3.10.9",
    "matplotlib-inline>=0.2.2",
    "nbformat>=5.10.4",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.12",
    "rapidfuzz>=3.14.5",
]
